<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b39ddb"
    tools:context="com.romero.aboutme.MainActivity">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_height="120dp"
            android:layout_width="120dp"
            android:src="@drawable/profilepic"
            android:contentDescription="@string/profile_text"/>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile"
        android:textSize="25sp"
        android:layout_marginTop="20sp"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:text="@string/career"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/career"
        android:layout_alignStart="@id/name"
        android:src="@drawable/fb"
        android:layout_alignLeft="@id/name" />
    <TextView
        android:id="@+id/fbuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/fb"
        android:layout_below="@id/career"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:text="@string/fb_name"
        android:layout_toRightOf="@id/fb"
        android:layout_marginLeft="10dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cell"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/fb"
        android:layout_alignStart="@id/name"
        android:src="@drawable/cell"
        android:layout_alignLeft="@id/name" />
    <TextView
        android:id="@+id/cellp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/cell"
        android:layout_below="@id/fb"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:layout_marginStart="10dp"
        android:text="@string/phone"
        android:layout_toRightOf="@id/cell"
        android:layout_marginLeft="10dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/github"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/career"
        android:layout_toEndOf="@id/fbuser"
        android:src="@drawable/github"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/fbuser" />
    <TextView
        android:id="@+id/ghuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/github"
        android:layout_below="@id/career"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:text="@string/gh_name"
        android:layout_toRightOf="@id/github"
        android:layout_marginLeft="10dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/email"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/github"
        android:layout_alignStart="@id/github"
        android:src="@drawable/mail"
        android:layout_alignLeft="@id/github" />
    <TextView
        android:id="@+id/emailt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/email"
        android:layout_below="@id/github"
        android:textColor="#000000"
        android:fontFamily="casual"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:text="@string/email"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/email" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/powered"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimaryDark"
        android:onClick="process"
        android:text="@string/share"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/powered"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#817e7e"
        android:text="@string/poweredby"
        android:layout_marginBottom="30dp"/>
</RelativeLayout>
